fix model list overflow

--- a/public/css_v2.0.1_f1/style.css
+++ b/public/css_v2.0.1_f1/style.css
@@ -451,7 +451,9 @@ button:disabled{
 .grn-c{
     background-color: green;
 }
-
+.ai-c{
+    background-color: rgb(179, 0, 255);
+}
 /* SECTION: BURGER MENUS */
 .burger-menu{
     position: relative;
